@@ -1,4 +1,4 @@
-@import url("common.css");
+@import url("common.css?1");
 
 body { margin: 0px; padding: 0px; color: black; }
 #specialform { display: inline; }
