@@ -1,4 +1,4 @@
-@import url("common.css");
+@import url("common.css?1");
 body {
 	/* Background color is set separately on page type */
 	color: black;
