@@ -1,4 +1,4 @@
-@import url("common.css");
+@import url("common.css?1");
 
 #article { padding: 4px; }
 #content { margin: 0; padding: 0; }
