@@ -398,3 +398,7 @@ div.prefsectiontip {
 #jump-to-nav {
   display: none;
 }
+
+table.collapsed tr.collapsable {
+	display: none;
+}
